--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Richardson</span>
                     </h1>
                     <div class="subheading mb-5">
-                        New York · Boston · D.C. · (973) 396-7643 ·
+                        New York / Boston / D.C. · (973) 396-7643 ·
                         <a href="mailto:name@email.com">elliotlrichardson@gmail.com</a>
                     </div>
                     <p class="lead mb-5">As a data scientist with a background in field organizing, I bring the passion of a grassroots perspective into strategy, targeting, and outreach planning. I care deeply about creating an empathetic, equitable society on a thriving planet. If you are fighting towards that goal, I will work alongside you to create a targeted program, assess your progress towards goals, and develop streamlined tools to give you and your team all of the information you need.</p>
