--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Maine Data Director</h3>
+                            <div class="subheading mb-3">NextGen America</div>
+                            <p> Provided data training and support for a statewide field program focused on registering and mobilizing young voters to flip the Senate. Utilized Civis Analytics, SQL, and Google Sheets to create complex automated reports and trackers utilized at the state and national level. Created a targeted outreach program and served as administrator for VAN, ThruTalk, and Thrutext during its implementation
+                                </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
                     </div>
