--- a/index.html
+++ b/index.html
@@ -75,27 +75,38 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Regional Organizer for Boston</h3>
+                            <div class="subheading mb-3">Warren for President</div>
+                            <p><ul>
+                                <li>Recruited, managed, and developed 18 volunteer leaders to host events, recruit volunteers, and conduct voter contact across Boston</li>
+                                <li>Directed 250+ canvassers to knock 25,000+ doors and 130+ phone bankers to reach out to 11,000+ supporters and voters</li>
+                                <li>Personally attempted contact of 8,000+ volunteers and voters</li>
+                                <li>Organized canvass launches of hundreds of volunteers with surrogates such as Ayanna Pressley, Maura Healey, and Michelle Wu</li></ul></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2020 - March 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">Statewide Campus Organizer for Massachusetts</h3>
+                            <div class="subheading mb-3">Warren for President</div>
+                            <p><ul>
+                                <li>Created the campus organizing program in Massachusetts, managing, training, and developing 20 campus chapters and 36 student leaders</li>
+                                <li>Directed 100+ canvassers to knock 30,000+ doors in NH and MA</li>
+                                <li>Facilitated phone bank attempts of 20,000+ supporters and voters</li>
+                                <li>Personally attempted contact of 16,000+ volunteers and voters</li></ul></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2019 - March 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <h3 class="mb-0">State & Local Campaigns Intern</h3>
+                            <div class="subheading mb-3">EMILY'S List</div>
+                            <p><ul>
+                                <li>Monitored races across the country and compiled daily news clips</li>
+                                <li>Researched thousands of donors to facilitate fundraising efforts</li>
+                                <li>Produced hundreds of research memos about candidates’ district, opponents, and experience to inform endorsements</li></ul></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2018 - July 2018</span></div>
                     </div>
                 </div>
             </section>
