--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Northeastern University</h3>
-                            <div class="subheading mb-3">Bachelor of Arts - Magna cum laude</div>
+                            <div class="subheading mb-3">BA in Political Science - Magna cum laude</div>
                             <div>Political Science</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2015 - August 2019</span></div>
@@ -179,8 +179,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>Though I am prone to thinking that everything is political, I do have some hobbies and interests that aren't explicitly political. I love music (as most do) and like to consider myself an amateur singer-songwriter. My favorite musical artist is Frank Ocean, a queer Black man making history in the R&B genre (sadly, that photo of us is not real, but it's a testament to my Photoshop abilities).</p>
+                    <p class="mb-0">I love my sweet fluffy golden retriever Clementine, biking everywhere and I've recently gotten really into rock-climbing. I love karaoke (live-band is very cool  if you can find it), and I'm also a very knowledgeable and devoted eater of ice cream, an avid Northeastern hockey fan, and a big podcast person.</p>
                 </div>
             </section>
             <hr class="m-0" />
