removing political science from paragraph

--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Northeastern University</h3>
                             <div class="subheading mb-3">BA in Political Science - Magna cum laude</div>
-                            <div>Political Science</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2015 - August 2019</span></div>
                     </div>
@@ -179,8 +178,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Though I am prone to thinking that everything is political, I do have some hobbies and interests that aren't explicitly political. I love music (as most do) and like to consider myself an amateur singer-songwriter. My favorite musical artist is Frank Ocean, a queer Black man making history in the R&B genre (sadly, that photo of us is not real, but it's a testament to my Photoshop abilities).</p>
-                    <p class="mb-0">I love my sweet fluffy golden retriever Clementine, biking everywhere and I've recently gotten really into rock-climbing. I love karaoke (live-band is very cool  if you can find it), and I'm also a very knowledgeable and devoted eater of ice cream, an avid Northeastern hockey fan, and a big podcast person.</p>
+                    <p>Though I am prone to thinking that everything is political, I do have some hobbies and interests that aren't explicitly political. I love music (as most do) and like to consider myself an amateur singer-songwriter. My favorite musical artist is Frank Ocean, a queer Black man making history in the R&B genre.</p>
+                    <p class="mb-0">I love my sweet fluffy golden retriever Clementine, biking everywhere and I've recently gotten really into rock-climbing. I love karaoke (live-band is very cool if you can find it), and I'm also a very knowledgeable and devoted eater of ice cream, an avid Northeastern hockey fan, and a big podcast person.</p>
                 </div>
             </section>
             <hr class="m-0" />
