--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         New York / Boston / D.C. · (973) 396-7643 ·
                         <a href="mailto:name@email.com">elliotlrichardson@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">As a data scientist with a background in field organizing, I bring the passion of a grassroots perspective into strategy, targeting, and outreach planning. I care deeply about creating an empathetic, equitable society on a thriving planet. If you are fighting towards that goal, I will work alongside you to create a targeted program, assess your progress towards goals, and develop streamlined tools to give you and your team all of the information you need.</p>
+                    <p class="lead mb-5">As a data scientist with a background in field organizing, I bring the passion of a grassroots perspective into strategy, targeting, and outreach planning. I care deeply about creating an empathetic, equitable society on a thriving planet; if you are fighting towards that goal, I will work tirelessly alongside you to create a targeted program, assess your progress towards goals, and develop streamlined tools to give you and your team all of the information you need.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/elliotlrich"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/elliotlrichardson"><i class="fab fa-github"></i></a>
