updated skills section

--- a/index.html
+++ b/index.html
@@ -138,39 +138,30 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <div class="subheading mb-3">Technical</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                        <li>SQL (Civis Analytics & Redshift especially)</li>
+                        <li>Python (cleaning, analytics, visualization and machine learning)</li>
+                        <li>NGP VAN (Admin experience)</li>
+                        <li>Advanced Google Sheets</li>
+                        <li>Tableau visualizations</li>
+                        <li>ThruTalk (Admin experience)</li>
+                        <li>ThruText (Admin experience)</li>
+                        <li>Reach (Admin experience)</li>
+                        <li>Mobilize (Admin experience)</li>
+                        <li>Adobe Photoshop (intermediate)</li>
+                        <li>HTML & CSS (beginner but it's so fun!)</li>
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3">Political</div>
                     <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
-                        </li>
+                        <li>Grassroots organizing</li>
+                        <li>Political persuasion</li>
+                        <li>Volunteer management</li>
+                        <li>Trainings (soft & hard skills)</li>
+                        <li>Event planning</li>
+                        <li>Research and vetting</li>
+                        <li>News clips</li>
+                        <li>Donor Research</li>
                     </ul>
                 </div>
             </section>
