fixed skill font size

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Technical</div>
-                    <ul class="list-inline dev-icons">
+                    <ul class="fa-ul mb-0">
                         <li>SQL (Civis Analytics & Redshift especially)</li>
                         <li>Python (cleaning, analytics, visualization and machine learning)</li>
                         <li>NGP VAN (Admin experience)</li>
