finished interests and added portfolio links

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         New York / Boston / D.C. · (973) 396-7643 ·
                         <a href="mailto:name@email.com">elliotlrichardson@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">As a data scientist with a background in field organizing, I bring the passion of a grassroots perspective into strategy, targeting, and outreach planning. I care deeply about creating an empathetic, equitable society on a thriving planet; if you are fighting towards that goal, I will work tirelessly alongside you to create a targeted program, assess your progress towards goals, and develop streamlined tools to give you and your team all of the information you need.</p>
+                    <p class="lead mb-5">As a data scientist with a background in field organizing, I bring the passion of a grassroots perspective into strategy, targeting, and outreach planning. I care deeply about creating an empathetic, equitable society on a thriving planet; if you are fighting towards that goal, I will work tirelessly alongside you to create a targeted program, assess your progress towards goals, and develop streamlined tools to give you and your team all of the information you need. Shoot me an email! :^)</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/elliotlrich"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/elliotlrichardson"><i class="fab fa-github"></i></a>
@@ -141,7 +141,7 @@
                     <div class="subheading mb-3">Technical</div>
                     <ul>
                         <li>SQL (Civis Analytics & Redshift especially)</li>
-                        <li>Python (cleaning, analytics, visualization and machine learning)</li>
+                        <li>Python (cleaning, analytics & machine learning)</li>
                         <li>NGP VAN (Admin experience)</li>
                         <li>Advanced Google Sheets</li>
                         <li>Tableau visualizations</li>
@@ -173,54 +173,19 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Though I am prone to thinking that everything is political, I do have some hobbies and interests that aren't explicitly political. I love music (as most do) and like to consider myself an amateur singer-songwriter. My favorite musical artist is Frank Ocean, a queer Black man making history in the R&B genre.</p>
-                    <p class="mb-0">I love my sweet fluffy golden retriever Clementine, biking everywhere and I've recently gotten really into rock-climbing. I love karaoke (live-band is very cool if you can find it), and I'm also a very knowledgeable and devoted eater of ice cream, an avid Northeastern hockey fan, and a big podcast person.</p>
+                    <p>Foremost among my interests is our progress as a civilization towards a world in which everyone can live a comfortable and healthy life in harmony with a planet thriving with wildlife. This vision incorporates so many things: climate justice, indigenous sovereignty, racial equity, queer liberation, disability justice, universal healthcare, prison abolition, universal jobs guarantee,protected democratic systems, universal childcare, and more. I love approaching the steps to get there as puzzles and problem solving with people as passionate as I am.  Let's collaborate to get to that future :^)  </p>
+                    <p class="mb-0">Though I am prone to thinking that everything is political, I do have some hobbies and interests that aren't explicitly political. I love music (as most do) and like to consider myself an amateur singer-songwriter. I'm a bit rusty on the piano and still acquainting myself with the layout of the neck of a guitar, but I have a lot of fun playing and singing with friends. Not surprisingly, I love karaoke (live-band is very cool if you can find it).My absolute favorite musical artist is Frank Ocean, a queer Black man making history in the R&B genre. Highly recommend checking out his album, Channel Orange, as an introduction to his work!</p>
+                    <p class="mb-0">Part of my love for the planet is a love for its wildlife! I'm not unique for my love of animals but I'd be remiss if I left it off this page. I'm especially awe-struck when it comes to large and intelligent sea mammals. My favorite animal in the world is my sweet fluffy golden retriever Clementine who adores the snow and her plush golden retriever friend (as big as she is), Dinkles. I really like biking everywhere and I've recently gotten back into rock-climbing after loving it as a kid. I'm also a very knowledgeable and devoted eater of ice cream, a big Northeastern hockey fan, and a fan of nonfiction, history, fiction, and sci-fi reads. <a href="mailto:name@email.com">Send me some suggestions!</a></p>
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Awards-->
+            <!-- Portfolio-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">Portfolio</h2>
                     <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
-                        </li>
+                        <li><a href="https://github.com/elliotlrichardson/Portfolio">Data & analytics</a></li>
+                        <li><a href="https://drive.google.com/drive/folders/1TRzCGpGuhVFHa44yrIhNyvZC12lkHsST?usp=sharing">Writing & research</a></li>
                     </ul>
                 </div>
             </section>
