--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
                         <a class="social-icon" href="https://github.com/elliotlrichardson" target="_blank"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://www.twitter.com/elliotlrich" target="_blank"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/elliotlrich" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/elliotlrich" target="_blank"><i class="fab fa-instagram"></i></a>
+                        
                     </div>
                 </div>
             </section>
@@ -172,7 +174,7 @@
             <!-- Portfolio-->
             <section class="resume-section" id="Portfolio">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Portfolio</h2>
+                    <h2 class="mb-5">Portfolio links</h2>
                     <ul class="fa-ul mb-0">
                         <li>Data & analytics (under construction)</li>
                         <li><a href="https://drive.google.com/drive/folders/1TRzCGpGuhVFHa44yrIhNyvZC12lkHsST?usp=sharing" target="_blank">Writing & research</a></li>
