--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+    <head><link rel="stylesheet" type="text/css" href="css/main.css">
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
@@ -47,13 +47,13 @@
                         New York / Boston / D.C. · (973) 396-7643 ·
                         <a href="mailto:name@email.com" target="_blank">elliotlrichardson@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">As a data scientist with a background in field organizing, I bring the passion of a grassroots perspective into strategy, targeting, and outreach planning. I care deeply about creating an empathetic, equitable society on a thriving planet; if you are fighting towards that goal, I will work tirelessly alongside you to create a targeted program, assess your progress towards goals, and develop streamlined tools to give you and your team all of the information you need. Shoot me an email! :^)</p>
+                    <p class="lead mb-5">As a data scientist with a background in field organizing, I bring the passion of a grassroots perspective into strategy, targeting, and outreach planning. I care deeply about creating an empathetic, equitable society on a thriving planet; if you are fighting towards that goal, I will work tirelessly alongside you to create a targeted program, assess your progress towards goals, and develop streamlined tools to give you and your team all of the information you need. <a href="mailto:name@email.com" target="_blank">Shoot me an email!</a> :^)</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/elliotlrich" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/elliotlrichardson" target="_blank"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://www.twitter.com/elliotlrich" target="_blank"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/elliotlrich" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a class="social-icon" href="https://www.facebook.com/elliotlrich" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a class="social-icon" href="https://www.instagram.com/smelliotthegoat" target="_blank"><i class="fab fa-instagram"></i></a>
                         
                     </div>
                 </div>
