added a pic just to try

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Maine Data Director</h3>
-                            <div class="subheading mb-3">NextGen America</div>
+                            <div class="subheading mb-3">NextGen America</div><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/nga.png" alt="" />
                             <p> <ul>
                                 <li>Provided data training and support for a statewide field program focused on registering and mobilizing young voters to flip the Senate</li>
                                 <li>Utilized Civis Analytics, SQL, and Google Sheets to create complex automated reports and trackers utilized at the state and national level</li>
