--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Maine Data Director</h3>
-                            <div class="subheading mb-3">NextGen America</div><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/nga.png" alt="" />
+                            <div class="subheading mb-3">NextGen America</div>
                             <p> <ul>
                                 <li>Provided data training and support for a statewide field program focused on registering and mobilizing young voters to flip the Senate</li>
                                 <li>Utilized Civis Analytics, SQL, and Google Sheets to create complex automated reports and trackers utilized at the state and national level</li>
                                 <li>Created a targeted outreach program and served as administrator for VAN, ThruTalk, and Thrutext during its implementation</li></ul>
                                 </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">May 2020 - November 2020</span></div>
+                        <div class="flex-shrink-0"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/nga.png" alt="NextGen America logo" style="width:100px;height:80px;"><span class="text-primary">May 2020 - November 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
