--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
                                 <li>Created a targeted outreach program and served as administrator for VAN, ThruTalk, and Thrutext during its implementation</li></ul>
                                 </p>
                         </div>
-                        <div class="flex-shrink-0"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/nga.png" alt="NextGen America logo" style="width:100px;height:80px;"><span class="text-primary">May 2020 - November 2020</span></div>
+                        <div class="flex-shrink-0"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/nga.png" alt="NextGen America logo" style="width:100px;height:100px;">
+                            <p></p>
+                            <span class="text-primary">May 2020 - November 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
