change photo alignment

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Maine Data Director</h3>
                             <div class="subheading mb-3">NextGen America</div>
-                            <p> <ul>
+                            <p> <ul class="resume-bullets">
                                 <li>Provided data training and support for a statewide field program focused on registering and mobilizing young voters to flip the Senate</li>
                                 <li>Utilized Civis Analytics, SQL, and Google Sheets to create complex automated reports and trackers utilized at the state and national level</li>
                                 <li>Created a targeted outreach program and served as administrator for VAN, ThruTalk, and Thrutext during its implementation</li></ul>
                                 </p>
                         </div>
-                        <div class="flex-shrink-0"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/nga.png" alt="NextGen America logo" style="width:100px;height:100px;">
+                        <div class="flex-shrink-0"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/nga.png" alt="NextGen America logo" style="width:100px;height:100px;float:right;">
                             <p></p>
                             <span class="text-primary">May 2020 - November 2020</span></div>
                     </div>
@@ -80,7 +80,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Regional Organizer for Boston</h3>
                             <div class="subheading mb-3">Warren for President</div>
-                            <p><ul>
+                            <p><ul class="resume-bullets">
                                 <li>Recruited, managed, and developed 18 volunteer leaders to host events, recruit volunteers, and conduct voter contact across Boston</li>
                                 <li>Directed 250+ canvassers to knock 25,000+ doors and 130+ phone bankers to reach out to 11,000+ supporters and voters</li>
                                 <li>Personally attempted contact of 8,000+ volunteers and voters</li>
@@ -92,7 +92,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Statewide Campus Organizer for Massachusetts</h3>
                             <div class="subheading mb-3">Warren for President</div>
-                            <p><ul>
+                            <p><ul class="resume-bullets">
                                 <li>Created the campus organizing program in Massachusetts, managing, training, and developing 20 campus chapters and 36 student leaders</li>
                                 <li>Directed 100+ canvassers to knock 30,000+ doors in NH and MA</li>
                                 <li>Facilitated phone bank attempts of 20,000+ supporters and voters</li>
@@ -104,7 +104,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">State & Local Campaigns Intern</h3>
                             <div class="subheading mb-3">EMILY'S List</div>
-                            <p><ul>
+                            <p><ul class="resume-bullets">
                                 <li>Monitored races across the country and compiled daily news clips</li>
                                 <li>Researched thousands of donors to facilitate fundraising efforts</li>
                                 <li>Produced hundreds of research memos about candidates’ district, opponents, and experience to inform endorsements</li></ul></p>
