--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                         <div class="flex-shrink-0"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/nga.png" alt="NextGen America logo" style="width:100px;height:100px;float:right;">
                             <br></br>
                             <br></br>
+                            <br></br>
                             <span class="text-primary">May 2020 - November 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -87,7 +88,10 @@
                                 <li>Personally attempted contact of 8,000+ volunteers and voters</li>
                                 <li>Organized canvass launches of hundreds of volunteers with surrogates such as Ayanna Pressley, Maura Healey, and Michelle Wu</li></ul></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">January 2020 - March 2020</span></div>
+                        <div class="flex-shrink-0">
+                            <span class="text-primary">January 2020 - March 2020</span>
+                            <br></br>
+                            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/nga.png" alt="NextGen America logo" style="width:100px;height:100px;float:right;"></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
