--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <div class="flex-shrink-0">
                             <span class="text-primary">January 2020 - March 2020</span>
                             <br></br>
-                            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/nga.png" alt="NextGen America logo" style="width:100px;height:100px;float:right;"></div>
+                            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/warren.png" alt="NextGen America logo" style="width:100px;height:100px;float:right;"></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
