applying photos to all jobs

--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
                                 <li>Created a targeted outreach program and served as administrator for VAN, ThruTalk, and Thrutext during its implementation</li></ul>
                                 </p>
                         </div>
-                        <div class="flex-shrink-0"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/nga.png" alt="NextGen America logo" style="width:100px;height:100px;float:right;">
+                        <div class="flex-shrink-0">
+                            <span class="text-primary">May 2020 - November 2020</span>
                             <br></br>
-                            <br></br>
-                            <br></br>
-                            <span class="text-primary">May 2020 - November 2020</span></div>
+                            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/nga.png" alt="NextGen America logo" style="width:100px;height:100px;float:right;">
+                        </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -91,7 +91,7 @@
                         <div class="flex-shrink-0">
                             <span class="text-primary">January 2020 - March 2020</span>
                             <br></br>
-                            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/warren.png" alt="NextGen America logo" style="width:100px;height:100px;float:right;"></div>
+                            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/warren.png" alt="Warren for President logo" style="width:100px;height:100px;float:right;"></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -103,7 +103,10 @@
                                 <li>Facilitated phone bank attempts of 20,000+ supporters and voters</li>
                                 <li>Personally attempted contact of 16,000+ volunteers and voters</li></ul></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2019 - March 2020</span></div>
+                        <div class="flex-shrink-0">
+                            <span class="text-primary">September 2019 - March 2020</span>
+                            <br></br>
+                            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/warren.png" alt="Warren for President logo" style="width:100px;height:100px;float:right;"></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -114,9 +117,11 @@
                                 <li>Researched thousands of donors to facilitate fundraising efforts</li>
                                 <li>Produced hundreds of research memos about candidates’ district, opponents, and experience to inform endorsements</li></ul></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">January 2018 - July 2018</span></div>
+                        <div class="flex-shrink-0">
+                            <span class="text-primary">January 2018 - July 2018</span>
+                            <br></br>
+                            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/EL.png" alt="Warren for President logo" style="width:100px;height:100px;float:right;"></div>
                     </div>
-                </div>
             </section>
             <hr class="m-0" />
             <!-- Education-->
