--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <div class="flex-shrink-0">
                             <span class="text-primary">January 2018 - July 2018</span>
                             <br></br>
-                            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/EL.png" alt="Warren for President logo" style="width:100px;height:100px;float:right;"></div>
+                            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/el.png" alt="EMILY's List logo" style="width:100px;height:100px;float:right;"></div>
                     </div>
             </section>
             <hr class="m-0" />
@@ -134,7 +134,10 @@
                             <div class="subheading mb-3">Data Science Immersive Bootcamp</div>
                             <p>A full-time data science bootcamp in which students get hands-on experience with Python, data analysis, and statistical modeling. The curriculum covers machine learning with algorithms of increasing complexity, from decision trees and random forests to natural language processing and neural networks.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2020 - March 2021</span></div>
+                        <div class="flex-shrink-0">
+                            <span class="text-primary">December 2020 - March 2021</span>
+                            <br></br>
+                            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/ga.png" alt="General Assembly logo" style="width:100px;height:100px;float:right;"></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -142,9 +145,11 @@
                             <div class="subheading mb-3">BA in Political Science - Magna cum laude</div>
 
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2015 - August 2019</span></div>
+                        <div class="flex-shrink-0">
+                            <span class="text-primary">September 2015 - August 2019</span>
+                            <br></br>
+                            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/neu.png" alt="Northeastern University logo" style="width:100px;height:100px;float:right;"></div>
                     </div>
-                </div>
             </section>
             <hr class="m-0" />
             <!-- Skills-->
