--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <div class="flex-shrink-0">
                             <span class="text-primary">January 2018 - July 2018</span>
                             <br></br>
-                            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/el.png" alt="EMILY's List logo" style="width:100px;height:100px;float:right;"></div>
+                            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/EL.png" alt="EMILY's List logo" style="width:100px;height:100px;float:right;"></div>
                     </div>
             </section>
             <hr class="m-0" />
