--- a/index.html
+++ b/index.html
@@ -155,12 +155,15 @@
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Portfolio links</h2>
+                    <h2 class="mb-5">Skills</h2>
+                    <div class="subheading mb-3">Portfolio Links</div>
                     <ul class="fa-ul mb-0">
                         <li>Data & analytics (under construction)</li>
                         <li><a href="https://drive.google.com/drive/folders/1TRzCGpGuhVFHa44yrIhNyvZC12lkHsST?usp=sharing" target="_blank">Writing & research</a></li>
                     </ul>
-                    <h2 class="mb-5">Skills</h2>
+                    <p></p>
+                    <p></p>
+                    <p></p>
                     <div class="subheading mb-3">Technical</div>
                     <ul>
                         <li>SQL (Civis Analytics & Redshift especially)</li>
