changed back to profile page

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <h2 class="mb-0">Skills</h2>
                     <div class="subheading mb-3">Portfolio Links</div>
                     <ul>
-                        <li><a href="https://github.com/elliotlrichardson?tab=repositories" target="_blank">Data & analytics</a></li>
+                        <li><a href="https://github.com/elliotlrichardson" target="_blank">Data & analytics</a></li>
                         <li><a href="https://drive.google.com/drive/folders/1TRzCGpGuhVFHa44yrIhNyvZC12lkHsST?usp=sharing" target="_blank">Writing & research</a></li>
                     </ul>
                     <p></p>
