updated skills section

--- a/index.html
+++ b/index.html
@@ -182,14 +182,17 @@
                     <p></p>
                     <div class="subheading mb-3">Political</div>
                     <ul>
+                        <li>Political targeting</li>
+                        <li>Outreach planning</li>
                         <li>Grassroots organizing</li>
-                        <li>Political persuasion</li>
-                        <li>Volunteer management</li>
                         <li>Trainings (soft & hard skills)</li>
-                        <li>Event planning</li>
+                        <li>Volunteer management</li>
+                        <li>GOTV planning and execution</li>
+                        <li>Political persuasion</li>
+                        <li>Volunteer recruitment</li>
                         <li>Research and vetting</li>
                         <li>News clips</li>
-                        <li>Donor Research</li>
+                        <li>Donor research</li>
                     </ul>
                 </div>
             </section>
