--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         New York / Boston / D.C. · (973) 396-7643 ·
                         <a href="mailto:elliotlrichardson@gmail.com" target="_blank">elliotlrichardson@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">As a data scientist with a background in field organizing, I bring the passion of a grassroots perspective into strategy, targeting, and outreach planning. I care deeply about creating an empathetic, equitable society on a thriving planet; if you are fighting for that vision, I will work tirelessly alongside you to create a targeted program, assess your progress towards goals, and develop streamlined tools to give you and your team all of the information you need. <a href="mailto:elliotlrichardson@gmail.com" target="_blank">Shoot me an email!</a> :^)</p>
+                    <p class="lead mb-5">As a data scientist with a background in field organizing, I bring the passion of a grassroots perspective into strategy, targeting, and outreach planning. I care deeply about creating an empathetic, equitable society on a thriving planet; if you are fighting for that vision, I will work tirelessly alongside you to create a targeted program, assess your progress towards goals, and develop streamlined tools to give you and your team all of the information you need. <a href="mailto:elliotlrichardson@gmail.com" target="_blank"><b>Shoot me an email!</b></a> :^)</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/elliotlrich" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/elliotlrichardson" target="_blank"><i class="fab fa-github"></i></a>
