adding sunrise to experience section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,22 @@
                     <h2 class="mb-0">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">National Field Data Manager</h3>
+                            <div class="subheading mb-3">Sunrise Movement</div>
+                            <p> <ul class="resume-bullets" style="margin-right: 20px">
+                                <li>Using SQL, Python, Parsons, and APIs to extract, transform, and export information to and from various platforms </li>
+                                <li>Conducting and presenting research on the electoral landscape to inform programming and organizing strategy</li>
+                                <li>Building analytics reports and dashboards that communicate the status and success of various programs </li></ul>
+                                </p>
+                        </div>
+                        <div class="flex-shrink-0">
+                            <span class="text-primary">April 2021 - Present</span>
+                            <br></br>
+                            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/sunrise.png" alt="Sunrise Movement logo" style="width:100px;height:100px;float:right;">
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Maine Data Director</h3>
                             <div class="subheading mb-3">NextGen America</div>
                             <p> <ul class="resume-bullets" style="margin-right: 20px">
