changing location to just Boston

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <span class="text-primary">Richardson</span>
                     </h1>
                     <div class="subheading mb-5">
-                        New York / Boston / D.C. · (973) 396-7643 ·
+                        Boston · (973) 396-7643 ·
                         <a href="mailto:elliotlrichardson@gmail.com" target="_blank">elliotlrichardson@gmail.com</a>
                     </div>
                     <p class="lead mb-5">As a data scientist with a background in field organizing, I bring the passion of a grassroots perspective into strategy, targeting, and outreach planning. I care deeply about creating an empathetic, equitable society on a thriving planet; if you are fighting for that vision, I will work tirelessly alongside you to create a targeted program, assess your progress towards goals, and develop streamlined tools to give you and your team all of the information you need. <a href="mailto:elliotlrichardson@gmail.com" target="_blank"><b>Shoot me an email!</b></a> :^)</p>
