--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         Boston · (973) 396-7643 ·
                         <a href="mailto:elliotlrichardson@gmail.com" target="_blank">elliotlrichardson@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">As a data scientist with a background in field organizing, I bring the passion of a grassroots perspective into strategy, targeting, and outreach planning. I care deeply about creating an empathetic, equitable society on a thriving planet; if you are fighting for that vision, I will work tirelessly alongside you to create a targeted program, assess your progress towards goals, and develop streamlined tools to give you and your team all of the information you need. <a href="mailto:elliotlrichardson@gmail.com" target="_blank"><b>Shoot me an email!</b></a> :^)</p>
+                    <p class="lead mb-5">As an analytics engineer with a background in field organizing, I bring the passion of a grassroots perspective into strategy, targeting, and outreach planning, and I can help you build information pipelines that help you execute the vision. I care deeply about creating an empathetic, equitable society on a thriving planet; if you are fighting for that future, I will work tirelessly alongside you to create a targeted program, assess your progress towards goals, and develop streamlined tools to give you and your team all of the information you need. <a href="mailto:elliotlrichardson@gmail.com" target="_blank"><b>Shoot me an email!</b></a> :^)</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/elliotlrich" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/elliotlrichardson" target="_blank"><i class="fab fa-github"></i></a>
@@ -63,7 +63,7 @@
                     <h2 class="mb-0">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">National Field Data Manager</h3>
+                            <h3 class="mb-0">Analytics Engineer</h3>
                             <div class="subheading mb-3">Sunrise Movement</div>
                             <p> <ul class="resume-bullets" style="margin-right: 20px">
                                 <li>Using SQL, Python, Parsons, and APIs to extract, transform, and export information to and from various platforms </li>
