updated title and skills

--- a/index.html
+++ b/index.html
@@ -183,15 +183,16 @@
                     <ul>
                         <li>SQL (Civis Analytics & Redshift especially)</li>
                         <li>Python (cleaning, analytics & machine learning)</li>
+                        <li>Parsons</li>
                         <li>NGP VAN (Admin experience)</li>
                         <li>Advanced Google Sheets</li>
-                        <li>Tableau visualizations</li>
+                        <li>Tableau & Periscope visualizations</li>
                         <li>ThruTalk (Admin experience)</li>
                         <li>ThruText (Admin experience)</li>
                         <li>Reach (Admin experience)</li>
                         <li>Mobilize (Admin experience)</li>
                         <li>Adobe Photoshop (intermediate)</li>
-                        <li>HTML & CSS (beginner but it's so fun!)</li>
+                        <li>Javascript, HTML & CSS (beginner but it's so fun!)</li>
                     </ul>
                     <p></p>
                     <p></p>
